--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 <header class="header">
         <div class="header-text">
-            <span>Jose Panche</span>
+            <span>Jose David Panche</span>
             <h1 class="header-text-frase">
                 Proverbios 9: 1-2<br>
                 TODOS TIENEN QUE COMER
@@ -135,10 +135,10 @@
             </section>
             <section class="habi-seccion-dos">
                 <div class="habi-seccion-dos-img1">
-                    <img src="Img/mujer.jpg" alt="Habilidades">
+                    <img src="Img/yoyd.jpg" alt="Habilidades">
                 </div>
                 <div class="habi-seccion-dos-img2">
-                    <img src="Img/tres.jpg" alt="Habilidades">
+                    <img src="Img/yodd.jpg" alt="Habilidades">
                 </div>
             
             </section>
@@ -148,18 +148,18 @@
     </section>
     <section class="sobre-mi">
         <section class="sobre-mi-img">
-            <img src="Img/cuatro.jpg" alt="Sobre mí">
+            <img src="Img/yo2.jpg" alt="Sobre mí">
 
         </section>
         <section class="sobre-mi-texto">
             <h3>Sobre mí</h3>
-            <h2>Construyendo mi camino hacia el futuro</h2>
+            <h2>Programando Mi Futuro</h2>
             <p>
-                Soy un estudiante apasionado por la tecnología y el aprendizaje continuo. Me esfuerzo por combinar mis habilidades técnicas con una actitud proactiva para resolver problemas y aportar soluciones creativas. 
+                Soy una persona entusiasta por la tecnología y el poder transformador del aprendizaje constante. Me interesa aplicar mis conocimientos técnicos con iniciativa y pensamiento creativo para enfrentar desafíos y generar soluciones útiles.
             </p>
-            <p> Actualmente estoy en proceso de formación en desarrollo web y me motiva seguir aprendiendo sobre programación, diseño y herramientas digitales que impacten positivamente en mi entorno.
+            <p> Actualmente me estoy formando en desarrollo web, y me impulsa la idea de seguir explorando áreas como la programación, el diseño digital y las herramientas tecnológicas que puedan generar un impacto positivo en la sociedad.
             </p>
-            <p> Mi objetivo es contribuir con proyectos significativos, colaborar en equipos multidisciplinarios y crecer profesionalmente en el mundo de la tecnología.
+            <p> Aspiro a formar parte de proyectos con propósito, colaborar con profesionales de distintas áreas y seguir desarrollándome dentro del apasionante mundo tech.
             </p>
             <button>Contactame</button>
 
@@ -193,7 +193,7 @@
         <div class="footer-contacto">
             <ul>
                 <li>Email: jose.panche.sena@gmail.com</li>
-                <li>Teléfono: +57 323 997 4978<</li>
+                <li>Teléfono: +57 323 997 4978</li>
                 <li><a href="https://github.com/JoseDavid129" target="_blank">GitHub</a> </li>
                 <li><a href="https://linkedin.com/in/tuperfil" target="_blank">LinkedIn</a></li>
             </ul>
@@ -204,7 +204,7 @@
         </div>
 
         <div class="footer-copy">
-            <p>© 2025 Tu Nombre. Todos los derechos reservados.</p>
+            <p>© 2025 Jose Panche. Todos los derechos reservados.</p>
         </div>
     </footer>
 
